[package]
name = "mcp-light-house"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version ="0.12.18", features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
#     "server",
#     "transport-sse-server",
#     "transport-io",
# ] }
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server","transport-io",]}
async-trait = "0.1.88"
futures = "0.3"
schemars = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"


[[example]]
name = "mcp-light-house"
path = "src/main.rs"


#cargo build --release --example mcp-light-house